flux-config/infrastructure/configs/gateway-api/shared-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: shared-gateway
  namespace: istio-ingress
spec:
  gatewayClassName: istio
  addresses:
  - value: istio-gateway.istio-ingress.svc.cluster.local
    type: Hostname
  listeners:
  - name: http
    hostname: "*.local"
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
